[package]
name = "ping-tub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pingtub"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
egui = "0.26.2"
image = "0.24.9"
obs-wrapper = "0.4.1"
