[package]
name = "ping-tub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pingtub"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
egui = "0.26.2"
image = "0.24.9"
obs-wrapper = { version = "0.4.1" }
cpal = "0.15.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_signal = "0.11.0"
